@@ -1,3 +1,7 @@
+* 2013-05-02 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26300: Deal with absent session when checking request-count boundary
+
 * 2013-04-30 - marc.arens@open-xchange.com
 
  - Fix for bug 26022: Don't assume defaultcontext
